--- a/src/GtMotive.Estimate.Microservice.Host/appsettings.Development.json
+++ b/src/GtMotive.Estimate.Microservice.Host/appsettings.Development.json
@@ -5,7 +5,19 @@
   },
   "PathBase": "/",
   "Swagger": {
-      "AuthFlow": "AuthorizationCode",
-      "EnableTryIt": "Yes"
+    "AuthFlow": "AuthorizationCode",
+    "EnableTryIt": "Yes"
+  },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "RentingDB"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   }
 }
+
